fixed social media links linking to DEV pages, show follow tag buttons on mobile screen, and added DEV logos to asset folder

--- a/src/components/main-nav/my-tags/my-tags.css
+++ b/src/components/main-nav/my-tags/my-tags.css
@@ -35,3 +35,10 @@
 	cursor: pointer;
 	display: block;
 }
+
+/* mobile screen */
+@media only screen and (max-width: 600px) {
+	.follow-tag-button {
+		display: block;
+	}
+}
